# Melancholy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Melancholy/: CMakeLists.txt  premake5.lua
Melancholy/Source/: MCore.h
Melancholy/Source/Melancholy/: Core.h
Melancholy/Source/Melancholy/Core/: Application.cpp  Application.h  Color.h  Event.h  ExportDefines.h  Log.cpp  Log.h  Math.cpp  Math.h  PlatformDetection.h  Window.cpp  Window.h
Melancholy/Source/Melancholy/Platform/: PlatformDetection.h
Melancholy/Source/Melancholy/Platform/OpenGL/: OpenGL_Api.cpp  OpenGL_Api.h  OpenGL_Context.cpp  OpenGL_Context.h  OpenGL_Mesh.cpp  OpenGL_Mesh.h  OpenGL_Shader.cpp  OpenGL_Shader.h  OpenGL_Texture2D.cpp  OpenGL_Texture2D.h
Melancholy/Source/Melancholy/Platform/glfw/: glfw_Window.cpp  glfw_Window.h
Melancholy/Source/Melancholy/Renderer/: GraphicsApi.cpp  GraphicsApi.h  GraphicsContext.cpp  GraphicsContext.h  Mesh.cpp  Mesh.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/Source/: Main.cpp
Source/Melancholy/: Defines.h
Source/Melancholy/Core/: Application.cpp  Application.h  Logger.cpp  Logger.h  Math.cpp  Math.h  PlatformDetection.h  Window.cpp  Window.h
Source/Melancholy/Platform/: Platform.h
Source/Melancholy/Platform/OpenGL/: OpenGL_Context.cpp  OpenGL_Context.h  OpenGL_GraphicsApi.cpp  OpenGL_GraphicsApi.h  OpenGL_Mesh.cpp  OpenGL_Mesh.h  OpenGL_Shader.cpp  OpenGL_Shader.h
Source/Melancholy/Platform/glfw/: glfw_Window.cpp  glfw_Window.h
Source/Melancholy/Renderer/: GraphicsApi.cpp  GraphicsApi.h  GraphicsContext.cpp  GraphicsContext.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
